# Operational-Research

./: README.md
lab-01 - Augmented Form/: GRADE.md  README.md  assignment.py
lab-01 - Augmented Form/saport/linear_programming/: __init__.py  exceptions.py
lab-01 - Augmented Form/tests/offline/: cases.py  test_assignment_models.py  test_augmented_form.py
lab-01/saport/linear_programming/: model.py  status.py
lab-02/: example_01_solvable.py
lab-02 - Simplex/: GRADE.md  HELP.md  README.md  example.py  example_02_solvable.py  example_03_unbounded.py
lab-02 - Simplex/saport/linear_programming/: solution.py
lab-02/saport/linear_programming/: model.py  solver.py
lab-02/tests/offline/: test_simplex_offline.py
lab-03/: example_04_solvable_artificial_vars.py
lab-03 - Two-Phase Simplex/: GRADE.md  README.md  conftest.py  example_01_solvable.py  example_02_solvable.py  example_03_unbounded.py  example_05_infeasible.py  pyproject.toml  test.py
lab-03 - Two-Phase Simplex/saport/linear_programming/solvers/simplex/: constants.py  solver.py  tableau.py
lab-03 - Two-Phase Simplex/tests/offline/: test_two_phase_simplex_offline.py
lab-03/saport/linear_programming/: result.py
lab-04 - Sensitivity and Duality/: GRADE.md  README.md
lab-04 - Sensitivity and Duality/examples/: example_00_basic.py  example_01_solvable.py  example_02_solvable.py  example_03_unbounded.py  example_04_solvable_artificial_vars.py  example_05_infeasible.py  example_06_domains.py  example_07_many_solutions.py  example_08_objective_sensitivity.py  example_09_dual_problem.py
(+34 files in other folders)
